--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-#airport
+#runway
 {
-    width: 100%;
-    height: 100%;
+    width:fit-content;
+    height:fit-content;
     background: url("runway.jpg") bottom repeat-x;
-    background-size: cover;
 
 }
 #plane
@@ -16,4 +15,12 @@
 body{
     caret-color: transparent;
     margin: 0px;
+}
+#airport{
+    width: 100%;
+    height: 809px;
+    background-image: url("runway.jpg");
+    background-size: auto;
+    background-repeat: repeat-x;
+    background-position:bottom;
 }
